--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
@@ -6,64 +6,64 @@
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
                 <ng-container matColumnDef="packetUniqueId">
                     <mat-header-cell *matHeaderCellDef>Packet ID</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.packetUniqueId | uppercase}}</mat-cell>
+                    <mat-cell *matCellDef="let packet">{{packet.packetUniqueId | uppercase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="internalBranch">
                     <mat-header-cell *matHeaderCellDef>Branch</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.customer">
-                            <!-- {{role.customer.customerUniqueId}} -->
+                    <mat-cell *matCellDef="let packet">
+                        <span *ngIf="packet.customer">
+                            <!-- {{packet.customer.customerUniqueId}} -->
                         </span>
                     </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="customerID">
                     <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.customer">
-                            {{role.customer.customerUniqueId}}
+                    <mat-cell *matCellDef="let packet">
+                        <span *ngIf="packet.customer">
+                            {{packet.customer.customerUniqueId}}
                         </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="loanId">
                     <mat-header-cell *matHeaderCellDef>Loan ID</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.customerLoan">
-                            {{role.customerLoan.loanUniqueId}}
+                    <mat-cell *matCellDef="let packet">
+                        <span *ngIf="packet.customerLoan">
+                            {{packet.customerLoan.loanUniqueId}}
                         </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="customerName">
                     <mat-header-cell *matHeaderCellDef>Customer Name</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.customerLoan">
-                            {{role.customerLoan.loanUniqueId}}
+                    <mat-cell *matCellDef="let packet">
+                        <span *ngIf="packet.customerLoan">
+                            {{packet.customerLoan.loanUniqueId}}
                         </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="loanAmount">
                     <mat-header-cell *matHeaderCellDef>Loan Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.customerLoan">
-                            {{role.customerLoan.loanUniqueId}}
+                    <mat-cell *matCellDef="let packet">
+                        <span *ngIf="packet.customerLoan">
+                            {{packet.customerLoan.loanUniqueId}}
                         </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="currentLocation">
                     <mat-header-cell *matHeaderCellDef>Current Location</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.customerLoan">
-                            {{role.customerLoan.loanUniqueId}}
+                    <mat-cell *matCellDef="let packet">
+                        <span *ngIf="packet.customerLoan">
+                            {{packet.customerLoan.loanUniqueId}}
                         </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let role">
-                            <button (click)="new(loan)" class="btn-transparent kt-margin-r-15"
+                    <mat-cell *matCellDef="let packet">
+                            <button (click)="updatePacket(packet)" class="btn-transparent kt-margin-r-15"
                                >Update Location</button>
-                            <button (click)="new(loan)" class="btn-transparent"
+                            <button (click)="packet(loan)" class="btn-transparent"
                                 >View Log</button>
                     </mat-cell>
                 </ng-container>
