--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
@@ -115,6 +115,9 @@
                                 <mat-error *ngIf="controls.pinCode.errors?.required && controls.pinCode.touched">
                                     Required field
                                 </mat-error>
+                                <mat-error *ngIf="controls.pinCode.errors?.minlength && controls.pinCode.touched">
+                                    Invalid Pincode
+                                </mat-error>
                             </div>
                         </div>
                     </div>
