--- a/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/checkout-customer/checkout-customer.component.html
@@ -67,7 +67,7 @@
                 </div>
             </div> -->
             <div class="row py-3">
-                <div class="col-6 pr-4">
+                <div class="col-6" [ngClass]="showNumberSearchFlag ? 'pr-4' : 'pl-4'">
                     <div class="row">
                         <div class="col-4 align-self-center">
                             <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Customer
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 pl-4">
+                <div class="col-6" [ngClass]="!showNumberSearchFlag ? 'pr-4 order-first' : 'pl-4'">
                     <div class="row">
                         <div class="col-4 align-self-center">
                             <label class="font-weight-500 text-color" [class.mandatory]="isMandatory">Mobile
