--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
@@ -32,13 +32,13 @@
                                 </div>
                                 <div class="col offset-4">
                                     <div class="row pb-2">
-                                        <div class="col">
+                                        <div class="col-6" *ngIf="schemeDeatils.schemeType == 'unsecured'">
                                             <mat-slide-toggle
                                                 (change)="changeDefault($event.checked, idx, schemeDeatils)">
                                                 <strong>Default</strong>
                                             </mat-slide-toggle>
                                         </div>
-                                        <div class="col">
+                                        <div class="col-6" [class.offset-6]="schemeDeatils.schemeType == 'secured'">
                                             <mat-slide-toggle [checked]="schemeDeatils.isActive"
                                                 (change)="changeStatus($event.checked, idx,schemeDeatils)">
                                                 <strong>Status</strong>
@@ -91,16 +91,16 @@
                         <div class="col-12">
                             <div class="row kt-margin-t-10">
                                 <div class="col form-label justify-content-center">
-                                    <label>Scheme Type - Secured</label>
+                                    <label>Scheme Type - {{schemeDeatils.schemeType | titlecase}}</label>
                                 </div>
                                 <div class="col form-label justify-content-center">
-                                    <label>Processing Charges - 500</label>
+                                    <label>Processing Charges - {{schemeDeatils.processingChargeFixed}}</label>
                                 </div>
                                 <div class="col form-label justify-content-center">
-                                    <label>Maximum % Allowed - 67%</label>
+                                    <label>Maximum % Allowed - {{schemeDeatils.maximumPercentageAllowed}}%</label>
                                 </div>
                                 <div class="col form-label justify-content-center">
-                                    <label>Penal Interest - 10%</label>
+                                    <label>Penal Interest - {{schemeDeatils.penalInterest}}%</label>
                                 </div>
                             </div>
                         </div>
