--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
@@ -78,7 +78,8 @@
                                         [class.isError]="fillingForm.get('processingChargeFixed').touched && fillingForm.get('processingChargeFixed').invalid"
                                         placeholder="Fixed">
                                     <mat-error
-                                        *ngIf="fillingForm.get('processingChargeFixed').errors?.pattern && fillingForm.get('processingChargeFixed').touched">
+                                        *ngIf="(fillingForm.get('processingChargeFixed').errors?.pattern && fillingForm.get('processingChargeFixed').touched)
+                                        || (fillingForm.get('processingChargeFixed').errors?.min && fillingForm.get('processingChargeFixed').touched)">
                                         Invalid Input
                                     </mat-error>
                                 </div>
@@ -87,8 +88,8 @@
                                     <input type="number" class="form-control" formControlName="processingChargePercent"
                                         [class.isError]="fillingForm.get('processingChargePercent').touched && fillingForm.get('processingChargePercent').invalid"
                                         placeholder="% of loan amount">
-                                    <mat-error
-                                        *ngIf="fillingForm.get('processingChargePercent').errors?.pattern && fillingForm.get('processingChargePercent').touched">
+                                    <mat-error *ngIf="(fillingForm.get('processingChargePercent').errors?.pattern && fillingForm.get('processingChargePercent').touched)
+                                        ">
                                         Invalid Input
                                     </mat-error>
                                 </div>
@@ -101,11 +102,11 @@
                             <label class="kt-padding-l-10 mandatory"> Maximum % Allowed </label>
                         </div>
                         <div class="col-9">
-                            <input type="test" class="form-control" formControlName="maxPercentAllowed"
-                                [class.isError]="fillingForm.get('maxPercentAllowed').touched && fillingForm.get('maxPercentAllowed').invalid"
+                            <input type="test" class="form-control" formControlName="maximumPercentageAllowed"
+                                [class.isError]="fillingForm.get('maximumPercentageAllowed').touched && fillingForm.get('maximumPercentageAllowed').invalid"
                                 placeholder="Maximum % Allowed">
                             <mat-error
-                                *ngIf="fillingForm.get('processingChargePercent').errors?.pattern && fillingForm.get('processingChargePercent').touched">
+                                *ngIf="fillingForm.get('maximumPercentageAllowed').errors?.pattern && fillingForm.get('maximumPercentageAllowed').touched">
                                 Invalid Input
                             </mat-error>
                         </div>
@@ -113,16 +114,17 @@
 
                     <div class="row kt-margin-b-15">
                         <div class="col-3 form-label">
-                            <label class="kt-padding-l-10 mandatory"> Penal Interest </label>
+                            <label class="kt-padding-l-10 mandatory"> Penal Interest (%) </label>
                         </div>
                         <div class="col-9">
                             <input type="test" class="form-control" formControlName="penalInterest"
                                 [class.isError]="fillingForm.get('penalInterest').touched && fillingForm.get('penalInterest').invalid"
                                 placeholder="00%">
                             <mat-error
-                                *ngIf="fillingForm.get('processingChargePercent').errors?.pattern && fillingForm.get('processingChargePercent').touched">
+                                *ngIf="fillingForm.get('penalInterest').errors?.pattern && fillingForm.get('penalInterest').touched">
                                 Invalid Input
                             </mat-error>
+
                         </div>
                     </div>
 
