--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.scss
@@ -44,6 +44,13 @@
     .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
         background-color: #454d67 !important;
     }
+
+    .scheme-details {
+        p {
+            margin-bottom: 5px;
+            font-weight: 500;
+        }
+    }
     
 
 }
