--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
@@ -7,7 +7,7 @@
 <kt-portlet *ngIf="schemes.length>0">
     <kt-portlet-body class="min-vh-60">
         <mat-tab-group #matTab>
-            <mat-tab label='{{scheme.name | uppercase}}' *ngFor="let scheme of schemes">
+            <mat-tab label='{{scheme.name | uppercase}}' *ngFor="let scheme of schemes;index as i">
                 <label class="text-color font-weight-bold h-v-text-center m-0" *ngIf="scheme.schemes.length==0">No
                     Schemes
                     Available</label>
@@ -33,8 +33,8 @@
                                 <div class="col offset-4">
                                     <div class="row pb-2">
                                         <div class="col">
-                                            <mat-slide-toggle
-                                                (change)="changeDefault($event.checked, idx, schemeDeatils)">
+                                            <mat-slide-toggle  *ngIf="schemeDeatils.schemeType == 'unsecured'" [disabled]="schemeDeatils.default"
+                                                (change)="changeDefault($event.checked, idx, schemeDeatils,i)" [checked]="schemeDeatils.default">
                                                 <strong>Default</strong>
                                             </mat-slide-toggle>
                                         </div>
