changes in register broker

--- a/gold-admin-frontend/src/app/views/pages/auth/login/login.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/login/login.component.html
@@ -59,6 +59,9 @@
 		<div class=" kt-margin-b-15">
 			<button class="btn btn-sign-otp w-100" (click)="signInWithOtp()">Sign In With Otp</button>
 		</div>
+		<div class=" kt-margin-b-15">
+			<button class="btn btn-sign-otp w-100" (click)="brokerRegister()">Register as a broker</button>
+		</div>
 		<!-- <mat-form-field>
 			<mat-label>Username</mat-label>
 			<input matInput placeholder="Username" formControlName="mobileNo" autocomplete="off" />
