--- a/gold-admin-frontend/src/app/views/pages/auth/auth.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/auth.component.html
@@ -39,7 +39,7 @@
 </div> -->
 <div class="login">
 	<!-- <div class="container"> -->
-	<div class="row justify-content-around">
+	<div class="row justify-content-around mx-0">
 		<div class="col-md-5  d-none d-md-block align-self-center">
 			<div class="header">GOLD FOR ALL</div>
 			<div class="sub-header">THE AUGMONT GOLD ECOSYSTEM</div>
